--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,46 +19,55 @@ server:
     min-spare-threads: 1000
 
 spring:
-    datasource:
-      url: jdbc:postgresql://localhost:5432/lojavirtual?autoreconnect=true
-      username: edersonjseder
-      password: Postgres1756
-      type: com.zaxxer.hikari.HikariDataSource
-      hikari:
-        connection-timeout: 20000 # Numero maximo de milissegundos que um cliente aguardara por conexao
-        minimum-idle: 200 # Numero minimo de conexoes inativas mantidas pelo HikariCP em um conjunto de conexoes
-        maximum-pool-size: 550 # Maximo do pool de conexoes
-        idle-timeout: 10000 # Tempo ocioso para conexao
-        pool-name: PoolHikari
-        auto-commit: false # Salvando dados no BD automaticamente
-      dbcp2:
-        pool-prepared-statements: true # Processos/execucoees dentro do database
-        max-open-prepared-statements: 550 # Portas abertas para processos/sessoes dentro de conexoes e de execucao de SQL dentro do databsse
-    platform: postgres
-    jpa:
+  profiles:
+    active: dev
+  flyway: #FlyWay configuration
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:/db/migration
+    check-location: true
+    table: flyway_schema_history
+    baseline-version: 2
+    sql-migration-prefix: V
+    sql-migration-separator: __
+    sql-migration-suffixes: .sql
+    mixed: true
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      connection-timeout: 20000 # Numero maximo de milissegundos que um cliente aguardara por conexao
+      minimum-idle: 200 # Numero minimo de conexoes inativas mantidas pelo HikariCP em um conjunto de conexoes
+      maximum-pool-size: 550 # Maximo do pool de conexoes
+      idle-timeout: 10000 # Tempo ocioso para conexao
+      pool-name: PoolHikari
+      auto-commit: false # Salvando dados no BD automaticamente
+    dbcp2:
+      pool-prepared-statements: true # Processos/execucoees dentro do database
+      max-open-prepared-statements: 550 # Portas abertas para processos/sessoes dentro de conexoes e de execucao de SQL dentro do databsse
+  platform: postgres
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
       hibernate:
-        ddl-auto: update
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.PostgreSQLDialect
-          temp:
-            use_jdbc_metadata_defaults: true
-          jdbc:
-            batch-size: 4
-          order_inserts: true
-          order_updates: true
-      database-platform: org.hibernate.dialect.PostgreSQL9Dialect
-    http:
-      encoding:
-        charset: UTF-8
-        enabled: true
-        force: true
-        force-request: true
-        force-response: true
-    transaction:
-      rollback-on-commit-failure: true
-    session:
-      jdbc:
-        cleanup-cron: 0 0 4 * * *
-    mvc:
-      static-path-pattern: /resources/static/** # Spring security habilita acesso a arquivos de imagens
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        temp:
+          use_jdbc_metadata_defaults: true
+        jdbc:
+          batch-size: 4
+        order_inserts: true
+        order_updates: true
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+      force-request: true
+      force-response: true
+  transaction:
+    rollback-on-commit-failure: true
+  session:
+    jdbc:
+      cleanup-cron: 0 0 4 * * *
+  mvc:
+    static-path-pattern: /resources/static/** # Spring security habilita acesso a arquivos de imagens
