Added one more line in application yml file for flyway

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,7 @@ spring:
     sql-migration-suffixes: .sql
     mixed: true
     fail-on-missing-locations: true
+    validate-on-migrate: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
