--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,6 +56,8 @@ spring:
       pool-prepared-statements: true # Processos/execucoees dentro do database
       max-open-prepared-statements: 550 # Portas abertas para processos/sessoes dentro de conexoes e de execucao de SQL dentro do databsse
   platform: postgres
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   jpa:
     hibernate:
       ddl-auto: update
