--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
     fail-on-missing-locations: true
     validate-on-migrate: false
   datasource:
-    url: "jdbc:postgresql://localhost:5432/lojavirtual?autoreconnect=true"
+    url: jdbc:postgresql://localhost:5432/lojavirtual?autoreconnect=true
     username: edersonjseder
     password: Postgres1756
     driver-class-name: org.postgresql.Driver
