--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
       postgres:
         image: postgres:14
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: Postgresecret
+          POSTGRES_USER: edersonjseder
+          POSTGRES_PASSWORD: Postgres1756
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
