--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
   profiles:
     active: dev
   flyway: #FlyWay configuration
-    enabled: true
+    enabled: false
     baseline-on-migrate: true
     locations: classpath:/db/migration
     table: flyway_schema_history
