--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     services:
       postgres:
-        image: postgres:14
+        image: postgres
         env:
           POSTGRES_USER: edersonjseder
           POSTGRES_PASSWORD: Postgres1756
