--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,17 @@ jobs:
         image: postgres
         env:
           POSTGRES_PASSWORD: Postgres1756
-          POSTGRES_DB: lojavirtual
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          POSTGRES_USER: postgres
         ports:
           - 5432:5432
+        options: --name myapp_db
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Create role
+        run: docker exec myapp_db bash -c "POSTGRES_PASSWORD=Postgres1756 psql -U postgres -c \"create role myapp with createdb login password 'myapp'\""
 
       - name: Setup Java 17
         uses: actions/setup-java@v3
